// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Back button > renders the back button component properly 1`] = `
<body>
  <div>
    <a
      class="flex gap-3"
      data-testid="back-button"
    >
      <img
        alt="Back"
        src="/images/left-blue-arrow.svg"
        width="12"
      />
       
      Back
    </a>
    <!--&lt;BackButton&gt;-->
  </div>
</body>
`;

exports[`CollapseButton > renders the collapse button component properly 1`] = `
<body>
  <div>
    <button
      class="w-max"
      data-testid="collapse-button"
      id=""
    >
      <img
        alt="Collapse Icon"
        class="rotate-0 transform transition duration-200"
        src="/images/chevronDownIcon.svg"
      />
    </button>
    <!--&lt;CollapseButton&gt;-->
  </div>
</body>
`;

exports[`Max Button > renders the max button component properly 1`] = `
<body>
  <div>
    <button
      class="btn btn-sm btn-text btn-ghost p-0 bg-transparent hover:bg-transparent font-bold text-primary tracking-widest disabled:text-primary disabled:cursor-not-allowed"
    >
      MAX
    </button>
    <!--&lt;MaxButton&gt;-->
  </div>
</body>
`;
